[package]
name = "rust-mpfr"
version = "0.1.7"
authors = [ "Bartłomiej Kamiński <fizyk20@gmail.com>" ]
description = "Simple MPFR bindings for Rust based on rust-gmp"
license = "MIT"
repository = "https://github.com/fizyk20/rust-mpfr.git"

[lib]
name = "rust_mpfr"
crate-type = ["rlib", "dylib"]

[build-dependencies]
cc = "1.0"

[dependencies]
libc = "0.2"
rust-gmp = "*"
serde = "1.0"

[dev-dependencies]
serde_derive = "*"
serde_json = "*"
